--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,15 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+
+    compile "org.scala-lang:scala-library:2.11.7"
+    compile "com.android.support:multidex:1.0.1"
+    androidTestCompile "com.android.support:multidex-instrumentation:1.0.1", {
+        exclude module: "multidex"
+    }
+
+    // to break 64k limit
+    compile "org.scalaz:scalaz-core_2.11:7.1.0"
+    compile "com.google.guava:guava-jdk5:17.0"
+    compile "org.apache.commons:commons-math3:3.3"
 }
